plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'com.google.protobuf' version '0.9.4' apply false
}

allprojects {
    group = 'com.cashtrack'
    version = '1.0.0'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    bootJar {
        enabled = false
    }
    jar {
        enabled = true
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += ["--enable-preview"]
    }
    tasks.withType(Test) {
        jvmArgs += ["--enable-preview"]
    }
    tasks.withType(JavaExec) {
        jvmArgs += ["--enable-preview"]
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:4.0.5"
            mavenBom "io.grpc:grpc-bom:1.68.0"
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'net.devh:grpc-server-spring-boot-starter:3.1.0.RELEASE'
        implementation 'net.devh:grpc-client-spring-boot-starter:3.1.0.RELEASE'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
        runtimeOnly 'com.mysql:mysql-connector-j'

        implementation 'io.grpc:grpc-netty-shaded'
        implementation 'io.grpc:grpc-protobuf'
        implementation 'io.grpc:grpc-stub'
        
        compileOnly 'org.projectlombok:lombok:1.18.46'
        annotationProcessor 'org.projectlombok:lombok:1.18.46'
        
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.junit.jupiter:junit-jupiter-api'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
        testImplementation 'org.mockito:mockito-core'
    }

    test {
        useJUnitPlatform()
    }
}
